--- a/notebooks/day4_neural_nets_student.ipynb
+++ b/notebooks/day4_neural_nets_student.ipynb
@@ -26,14 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "551b8b6d",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "92ab8dd8",
    "metadata": {
     "slideshow": {
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "46618e4b",
    "metadata": {
     "slideshow": {
@@ -67,7 +76,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../../py')\n",
+    "sys.path.append('../py')\n",
     "\n",
     "from plots import (\n",
     "    set_grad_plot_fig_ax,\n",
@@ -2940,9 +2949,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "dm23",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dm23"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2954,7 +2963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
